fix: scrollbar styles

--- a/apps/marginfi-v2-ui/src/styles/globals.css
+++ b/apps/marginfi-v2-ui/src/styles/globals.css
@@ -224,7 +224,6 @@ a {
 /* Track */
 ::-webkit-scrollbar-track {
   background: #131719;
-  border-radius: 5px;
 }
 
 /* Handle */
